--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,18 +1,31 @@
-<h1>新規投稿フォーム</h1>
-
-<% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-<%= form_with model: @book do |f| %>
-    <h4>本のタイトル</h4>
-      <%= f.text_field :title %>
-    <h4>感想</h4>
-      <%= f.text_area :body %>
-    <%= f.submit '投稿' %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-3">
+      <%= render 'books/list', book: @book, user: @user%>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-9">
+      <% @books.each do |book| %>
+      <h2>Books</h2>
+      <table class="books_table">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th><%= image_tag book.user.get_profile_image(100,100) %></th>
+            <th><%= book.title %></th>
+            <th><%= book.body %></th>
+          </tr>
+        </tbody>
+      </table>
+      <% end %>
+    </div>
+  </div>
+</div>
