--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,13 @@
-<h1>ここはAboutページです</h1>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto">
+      <div class="top_main"></div>
+        <h1>welcome to
+          <i class="fas fa-book"></i>
+          <strong>Bookers</strong>
+          !!
+        </h1>
+      </div>
+    </div>
+  </div>
+</div>
