--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,29 @@
-<h1>ここはTopページです</h1>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto">
+      <div class="top_main"></div>
+        <h1>welcome to
+          <i class="fas fa-book"></i>
+          <strong>Bookers</strong>
+          !!
+        </h1>
+          <i class="fas fa-book"></i>
+          <strong>Bookers</strong>
+          <br>
+          you can share and exchange your opinions,inpressions,and emotions<br>
+          <br>
+          about various books!
+        </p>
+        <div class="btns col-6 mx-auto">
+          <div class="btn">
+            <a class="btn btn-info btn-block" href="/users/sign_in">Log in</a>
+          </div>
+          <br>
+          <div class="btn">
+            <a class="btn btn-success btn-block" href="/users/sign_up">Sign up</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
