--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,31 @@
-<div>
-  <h3><%= @user.name %></h3>
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+<div class="container">
+  <div class="row">
+    <div class="col-3">
+      <%= render 'books/list', book: @book, user: @user%>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-9">
+      <% @books.each do |book| %>
+      <h2>Users</h2>
+      <table class="books_table">
+        <thead>
+          <tr>
+            <th>Image</th>
+            <th>name</th>
+            <th></th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th><%= image_tag book.user.get_profile_image(100,100) %></th>
+            <th><%= current_user %></th>
+            <th</th>
+          </tr>
+        </tbody>
+      </table>
+      <% end %>
+    </div>
+  </div>
 </div>
-
-<!-- ユーザーの投稿一覧 -->
-<%= render 'books/list', books: @books %>
