--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,7 @@
         <tbody>
           <tr>
             <th><%= image_tag book.user.get_profile_image(100,100) %></th>
-            <th><%= current_user %></th>
+            <th><%= @user.name %></th>
             <th</th>
           </tr>
         </tbody>
