--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -22,6 +22,14 @@
   </p>
 </div>
 
+<% if book.errors.any? %>
+  <%= book.errors.count %>error occurred
+  <ul>
+    <% book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 <h2>New book</h2>
 <%= form_with model: book do |f| %>
   <div class="title">
@@ -31,5 +39,6 @@
   <div class="opinion">
     <label for="book_opinion">Opinion</label><br>
       <%= f.text_area :body %>
+    <br>
     <%= f.submit 'Create Book' %>
 <% end %>
