--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,12 +1,14 @@
+<div>
+  <%= flash[:notice] %>
+</div>
 <div class="container">
   <div class="row">
-    <div class="col-3">
+    <div class="col-md-3">
       <%= render 'books/list', book: @book, user: @user%>
     </div>
   </div>
   <div class="row">
-    <div class="col-9">
-      <% @books.each do |book| %>
+    <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
       <table class="books_table">
         <thead>
@@ -18,14 +20,18 @@
           </tr>
         </thead>
         <tbody>
+          <% @books.each do |book| %>
           <tr>
-            <th><%= image_tag book.user.get_profile_image(100,100) %></th>
-            <th><%= book.title %></th>
+            <td><%= link_to user_path(book.user.id) do %>
+            <%= image_tag book.user.get_profile_image(100,100) %>
+            <% end %>
+            </td>
+            <td><%= link_to book.title, book_path(book.id) %></td>
             <th><%= book.body %></th>
           </tr>
+          <% end %>
         </tbody>
       </table>
-      <% end %>
     </div>
   </div>
 </div>
