--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,11 +1,32 @@
 <div>
-  <%= image_tag @book.get_image %>
-  <p>ショップ名：<%= @book.title %></p>
-  <p>説明：<%= @book.body %></p>
-  <p>投稿ユーザー画像：<%= image_tag @book.user.get_profile_image(100,100) %></p>
-  <p>ユーザーネーム：<%= @book.user.name %></p>
-  <p>投稿日：<%= @book.created_at.strftime('%Y/%m/%d') %></p>
-  <% if @book.user == current_user %>
-    <%= link_to "削除", book_path(@book), method: :delete %>
-  <% end %>
+  <%= flash[:notice] %>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <%= render 'books/list', book: @books, user: @book.user%>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-8 offset-md-1">
+      <h2>Book detail</h2>
+      <table class="books_table">
+        <tbody>
+          <tr>
+             <th><%= link_to user_path(@book.user.id) do %>
+            <%= image_tag @book.user.get_profile_image(100,100) %><br>
+            <%= @book.user.name %>
+            <% end %>
+            </th>
+            <th><%= @book.title %></th>
+            <th><%= @book.body %></th>
+            <% if @book.user == current_user %>
+            <td><%= link_to "Edit", edit_book_path(@book.id) %></td>
+            <td><%= link_to "Destroy", book_path(@book), method: :delete %></td>
+            <% end %>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
