--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,31 +1,37 @@
+<div>
+  <%= flash[:notice] %>
+</div>
 <div class="container">
   <div class="row">
-    <div class="col-3">
+    <div class="col-md-3">
       <%= render 'books/list', book: @book, user: @user%>
     </div>
   </div>
   <div class="row">
-    <div class="col-9">
-      <% @books.each do |book| %>
-      <h2>Users</h2>
+    <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
       <table class="books_table">
         <thead>
           <tr>
-            <th>Image</th>
-            <th>name</th>
             <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
             <th colspan="3"></th>
           </tr>
         </thead>
         <tbody>
+          <% @books.each do |book| %>
           <tr>
-            <th><%= image_tag book.user.get_profile_image(100,100) %></th>
-            <th><%= @user.name %></th>
-            <th</th>
+            <td><%= link_to user_path(book.user.id) do %>
+            <%= image_tag book.user.get_profile_image(100,100) %>
+            <% end %>
+            </td>
+            <td><%= link_to book.title, book_path(book.id) %></td>
+            <th><%= book.body %></th>
           </tr>
+          <% end %>
         </tbody>
       </table>
-      <% end %>
     </div>
   </div>
 </div>
