--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -9,7 +9,7 @@
       </tr>
       <tr>
         <th>introduction</th>
-        <th><%= current_user.introduction %></th>
+        <th><%= user.introduction %></th>
       </tr>
     </tbody>
   </table>
