--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,6 +81,7 @@
         </div>
       </nav>
     </header>
+    <p class="notice"><%= notice %></p>
     <main class="mb-auto">
     <%= yield %>
     </main>
