--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,16 @@
+
 <div class="container">
   <div class="row">
     <div class="info">
       <h2>User info</h2>
+      <% if @user.errors.any? %>
+        <%= @user.errors.count %>error occurred
+        <ul>
+          <% @user.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+          <% end %>
+        </ul>
+      <% end %>
       <%= form_with model: @user do |f| %>
         <div class="form-group">
           <label for="inputName">Name</label>
